MBA-89-uploading-images2

--- a/src/views/auth/forgot-password.ejs
+++ b/src/views/auth/forgot-password.ejs
@@ -27,7 +27,7 @@
               <a href="/auth/login" class="close-btn" id="closeBtn"><i class="fas fa-chevron-left"></i></a>
               <p>Forgot your Password? Check your email for a link to reset your password</p>
               <% if(error) {%>
-              <p class="error-msg"><%= error %></p>
+              <p class="error-msg" style="background-color: black;"><%= error %></p>
               <%}%>
               <input type="text" name="email" id="resetInput" placeholder="Email/Phone Number" required />
 
