--- a/public/css/style.css
+++ b/public/css/style.css
@@ -649,6 +649,35 @@ video {
   margin: 1rem auto;
 }
 
+.error-msg {
+  margin-bottom: 0.5rem;
+}
+
+.email-feedback {
+  font-size: 0.9rem;
+  margin-top: 0.2rem;
+  color: gray;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.email-feedback.error {
+  color: red;
+}
+
+.email-feedback.success {
+  color: green;
+}
+
+.input-error {
+  border-color: red;
+}
+
+.input-success {
+  border-color: green;
+}
+
 .posting {
   background-color: white;
 }
@@ -787,7 +816,7 @@ video {
   align-items: center;
   border: 1.5px solid #556C40;
   border-radius: 6px;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   cursor: pointer;
   transition: background-color 0.2s;
 }
@@ -797,7 +826,7 @@ video {
 .main-content-posting .step1-form .category-grid .category-option span {
   width: 100%;
   text-align: center;
-  padding: 0.7rem;
+  padding: 0.3rem;
 }
 .main-content-posting .step1-form .category-grid .category-option input:checked + span {
   font-weight: bold;
@@ -1049,6 +1078,62 @@ video {
 }
 .main-content-posting .carousel-btn.next {
   right: 10px;
+}
+
+.buying {
+  margin: 1rem;
+}
+.buying .buying-grid {
+  max-width: 300px;
+  padding: 1rem;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+.buying h3 {
+  margin-bottom: 1.3rem;
+  text-align: left;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.buying .category-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.75rem;
+}
+.buying .category-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 3px;
+  transition: transform 0.3s ease;
+}
+.buying .category-image {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 3px;
+}
+.buying .category-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  transition: background 0.3s ease;
+  padding: 0.3rem;
+  border: 1px solid black;
+}
+.buying .category-card:hover .category-overlay {
+  background: rgba(255, 255, 255, 0.6);
+}
+.buying .category-text {
+  color: black;
+  font-size: 1rem;
+  text-align: center;
+  font-weight: bold;
 }
 
 /* 8. Cards ======================= */
