--- a/src/sass/base/_elements.scss
+++ b/src/sass/base/_elements.scss
@@ -547,6 +547,37 @@
 }
 
 
+// register error
+
+.error-msg {
+  margin-bottom: .5rem;
+}
+
+.email-feedback {
+  font-size: 0.9rem;
+  margin-top: 0.2rem;
+  color: gray;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.email-feedback.error {
+  color: red;
+}
+
+.email-feedback.success {
+  color: green;
+}
+
+.input-error {
+  border-color: red;
+}
+
+.input-success {
+  border-color: green;
+}
+
 // posting
 .posting {
   background-color: $color-background;
@@ -720,9 +751,10 @@
         align-items: center;
         border: 1.5px solid $color-primary;
         border-radius: 6px;
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         cursor: pointer;
         transition: background-color 0.2s;
+
       }
 
       .category-option input {
@@ -732,7 +764,7 @@
       .category-option span {
         width: 100%;
         text-align: center;
-        padding: .7rem;
+        padding: .3rem;
       }
 
       .category-option input:checked+span {
@@ -742,7 +774,6 @@
       }
 
     }
-
 
   }
 
@@ -1055,6 +1086,76 @@
 
   .carousel-btn.next {
     right: 10px;
+  }
+
+}
+
+
+// buying category page
+
+.buying {
+  margin: 1rem;
+
+  .buying-grid {
+    max-width: 300px;
+    padding: 1rem;
+    // background-color: #f4f4f4;
+    // border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+
+  h3 {
+    margin-bottom: 1.3rem;
+    text-align: left;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .category-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.75rem;
+  }
+
+  .category-card {
+    position: relative;
+    overflow: hidden;
+    border-radius: 3px;
+    transition: transform 0.3s ease;
+  }
+
+  .category-image {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 3px;
+  }
+
+  .category-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    transition: background 0.3s ease;
+    padding: .3rem;
+    border: 1px solid $color-text;
+  }
+
+  .category-card:hover .category-overlay {
+    background: rgba(255, 255, 255, 0.6);
+  }
+
+  .category-text {
+    color: $color-text;
+    font-size: 1rem;
+    text-align: center;
+    font-weight: bold;
   }
 
 }
