--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -8,7 +8,7 @@
 
   <div class="profile-info">
     <div class="profile-img">
-      <img src=<%= user.profilePic %> alt="profile-img">
+      <img src="<%= user.profilePic ? user.profilePic : 'https://picsum.photos/300/300' %>" alt="profile-img">
 
       <div class="rating">
         <span class="star">★</span>
@@ -21,8 +21,8 @@
 
     <div class="user-details">
       <h3><%= user.name %></h3>
-      <p>Joined in 2020</p>
-      <p>Richmond, BC</p>
+      <p>Joined in <%= joinedYear %></p>
+      <p>Vancouver, BC</p>
 
       <div class="user-stats">
 
@@ -42,12 +42,6 @@
         </div>
       </div>
     </div>
-
-    <!-- <div class="profile-more-btn">
-        <button id="profile-more">
-          <i class="fas fa-ellipsis-h"></i>
-        </button>
-      </div> -->
 
   </div>
 
