--- a/public/css/style.css
+++ b/public/css/style.css
@@ -532,6 +532,32 @@ video {
 .main-content .checkbox-label span {
   flex: 8;
 }
+.main-content .error-msg {
+  margin-bottom: 0.5rem;
+}
+.main-content .email-feedback {
+  font-size: 0.9rem;
+  margin-top: 0.2rem;
+  color: gray;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+.main-content .email-feedback.error {
+  color: red;
+}
+.main-content .email-feedback.success {
+  color: green;
+}
+.main-content .email-div {
+  position: relative;
+}
+.main-content .check_icon {
+  position: absolute;
+  top: 0.2rem;
+  right: 1rem;
+  font-size: 1.3rem;
+}
 
 .logout-section {
   display: flex;
@@ -647,35 +673,6 @@ video {
   display: flex;
   justify-content: center;
   margin: 1rem auto;
-}
-
-.error-msg {
-  margin-bottom: 0.5rem;
-}
-
-.email-feedback {
-  font-size: 0.9rem;
-  margin-top: 0.2rem;
-  color: gray;
-  display: flex;
-  align-items: center;
-  gap: 0.4rem;
-}
-
-.email-feedback.error {
-  color: red;
-}
-
-.email-feedback.success {
-  color: green;
-}
-
-.input-error {
-  border-color: red;
-}
-
-.input-success {
-  border-color: green;
 }
 
 .posting {
